erDiagram
    "youtube.videos" {
        int Id PK
        text Url UNIQUE
        text Title
        text Description
        text ChannelName
        date UploadDate
        timestamptz SyncedAt
        jsonb Metadata
    }

    "music.artists" {
        int Id PK
        text Name UNIQUE
        text ExternalId
        varchar_50 SourceSystem
        jsonb Metadata
    }

    "music.albums" {
        int Id PK
        int ArtistId FK_NULL
        text Title
        date ReleaseDate
        text ExternalId
        varchar_50 SourceSystem
    }

    "music.tracks" {
        int Id PK
        int AlbumId FK_NULL
        int ArtistId FK_NULL
        int WorkId FK_NULL
        int MovementId FK_NULL
        text Title
        int DurationSeconds
        text ExternalId
        varchar_50 SourceSystem
    }

    "music.scrobbles" {
        long Id PK
        int TrackId FK_NULL
        timestamptz ScrobbledAt
        varchar_50 Platform
    }

    "music.works" {
        int Id PK
        text Title
        text Composer
        jsonb Metadata
    }

    "classical.movements" {
        int Id PK
        int WorkId FK_NULL
        int Position
        text Title
    }

    "music.release_progress" {
        long Id PK
        text ExternalId
        varchar_50 SourceSystem
        int DiscNumber
        int TrackNumber
        text Title
        text Artist
        text Composer
        text Conductor
        text Orchestra
        jsonb Soloists
        text WorkName
        text RecordingVenue
        timestamptz CreatedAt
    }

    "fibery.fibery_entities" {
        uuid Id PK
        varchar_255 FiberyId
        varchar_100 EntityType
        jsonb RawData
    }

    "public.execution_logs" {
        int Id PK
        timestamptz Timestamp
        text SessionId
        jsonb Payload
        int ExitCode
    }

    "public.failed_tasks" {
        uuid Id PK
        text TaskName
        text ErrorMessage
        timestamptz Timestamp
        int ExecutionLogId FK_NULL
    }

    "music.albums" }o--o| "music.artists" : "ArtistId"
    "music.tracks" }o--o| "music.albums" : "AlbumId"
    "music.tracks" }o--o| "music.artists" : "ArtistId"
    "music.tracks" }o--o| "music.works" : "WorkId"
    "music.tracks" }o--o| "classical.movements" : "MovementId"
    "music.scrobbles" }o--o| "music.tracks" : "TrackId"
    "classical.movements" }o--o| "music.works" : "WorkId"
    "public.failed_tasks" }o--o| "public.execution_logs" : "ExecutionLogId"
